--- a/app/src/main/res/layout/file_attachment_listdata.xml
+++ b/app/src/main/res/layout/file_attachment_listdata.xml
@@ -18,24 +18,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/status_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:button="@drawable/checkbox_selector"
-                android:visibility="gone"/>
+                android:layout_marginLeft="5dp"/>
 
             <ImageView
                 android:id="@+id/pic_imageview"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginBottom="5dp" />
         </LinearLayout>
 
         <LinearLayout
