--- a/app/src/main/res/layout/notifications_causecode_list_data.xml
+++ b/app/src/main/res/layout/notifications_causecode_list_data.xml
@@ -9,14 +9,14 @@
 	android:layout_marginTop="8dp">
 
     <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent">
-        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
-            <CheckBox
-                android:id="@+id/checkbox1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/checkbox1_selector"
-				android:visibility="gone"/>
-        </LinearLayout>
+		<LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
+			<CheckBox
+				android:id="@+id/checkbox"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:theme ="@style/CheckBox"
+				android:layout_gravity="center"/>
+		</LinearLayout>
 
         <LinearLayout android:layout_marginLeft="5dp" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:orientation="vertical">
             
