--- a/app/src/main/res/layout/order_operation_create_change.xml
+++ b/app/src/main/res/layout/order_operation_create_change.xml
@@ -47,28 +47,46 @@
             android:layout_marginBottom="@dimen/textInputTopMargin"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/textInputSideMargins"
                 android:layout_marginStart="@dimen/textInputSideMargins"
                 android:layout_marginTop="@dimen/textInputTopMargin"
                 android:background="@drawable/blueborder"
-                android:paddingEnd="@dimen/textInputSidePadd"
-                android:paddingStart="@dimen/textInputSidePadd"
-                android:paddingTop="@dimen/textInputTopPadd"
-                android:textColorHint="@color/colorPrimary"
-                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
-
-                <com.enstrapp.fieldtekpro.customfont.Font_TextInputEditText
-                    android:id="@+id/oprtnShrtTxt_tiet"
-                    android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@android:color/transparent"
-                    android:hint="@string/oprtn_shrt_start"
-                    android:maxLength="40"
-                    android:textSize="@dimen/textSize" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_weight=".9"
+                    android:paddingEnd="@dimen/textInputSidePadd"
+                    android:paddingStart="@dimen/textInputSidePadd"
+                    android:paddingTop="@dimen/textInputTopPadd"
+                    android:textColorHint="@color/colorPrimary"
+                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
+                    <com.enstrapp.fieldtekpro.customfont.Font_TextInputEditText
+                        android:id="@+id/oprtnShrtTxt_tiet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@android:color/transparent"
+                        android:hint="@string/oprtn_shrt_start"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:textSize="@dimen/textSize" />
+                </android.support.design.widget.TextInputLayout>
+                <ImageView
+                    android:id="@+id/longtext_imageview"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="@dimen/dropDownIconEndMarg"
+                    android:layout_marginTop="@dimen/dropDownIconTopMarg"
+                    android:layout_weight=".1"
+                    android:src="@drawable/ic_longtext_icon" />
+            </LinearLayout>
 
 
             <LinearLayout
@@ -176,22 +194,19 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="fill_parent"
                         android:paddingStart="@dimen/textInputSidePadd"
                         android:paddingTop="@dimen/textInputTopPadd"
                         android:textColorHint="@color/colorPrimary"
                         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
-
                         <com.enstrapp.fieldtekpro.customfont.Font_TextInputEditText
                             android:id="@+id/plant_tiet"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="fill_parent"
                             android:backgroundTint="@android:color/transparent"
                             android:cursorVisible="false"
                             android:focusable="false"
                             android:hint="@string/plant"
-                            android:inputType="text"
-                            android:maxLines="1"
                             android:textSize="@dimen/textSize" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
@@ -211,23 +226,20 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="fill_parent"
                         android:layout_weight=".8"
                         android:paddingStart="@dimen/textInputSidePadd"
                         android:paddingTop="@dimen/textInputTopPadd"
                         android:textColorHint="@color/colorPrimary"
                         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
-
                         <com.enstrapp.fieldtekpro.customfont.Font_TextInputEditText
                             android:id="@+id/wrkCntr_tiet"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="fill_parent"
                             android:backgroundTint="@android:color/transparent"
                             android:cursorVisible="false"
                             android:focusable="false"
                             android:hint="@string/work_center"
-                            android:inputType="text"
-                            android:maxLines="1"
                             android:textSize="@dimen/textSize" />
                     </android.support.design.widget.TextInputLayout>
 
