--- a/app/src/main/res/layout/f4_list_fragment.xml
+++ b/app/src/main/res/layout/f4_list_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_grey">
 
         <SearchView
@@ -24,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/search"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -49,5 +50,32 @@
                 android:textColor="@color/red"
                 android:textSize="16sp" />
         </LinearLayout>
+
+
+        <LinearLayout
+        android:id="@+id/bottom_panel"
+        android:orientation="vertical"
+        android:gravity="right"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="10dp"
+            android:visibility="gone">
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/filter_fab_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_fab_filter_icon"
+                android:layout_gravity="bottom|end"
+                app:elevation="6dp"
+                app:pressedTranslationZ="12dp"
+                app:backgroundTint="@color/dark_grey1"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
