--- a/app/src/main/res/layout/notifications_type_select_list_data.xml
+++ b/app/src/main/res/layout/notifications_type_select_list_data.xml
@@ -45,7 +45,8 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:id="@+id/text_layout">
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="45dp"
                     android:layout_height="fill_parent"
