--- a/app/src/main/res/layout/order_material_create_change.xml
+++ b/app/src/main/res/layout/order_material_create_change.xml
@@ -285,7 +285,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
-                    android:hint="@string/receipt"
+                    android:hint="@string/receipt1"
                     android:maxLength="40"
                     android:textSize="@dimen/textSize" />
             </android.support.design.widget.TextInputLayout>
