--- a/app/src/main/res/layout/dash_board_activity.xml
+++ b/app/src/main/res/layout/dash_board_activity.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
+                    android:id="@+id/userName_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dashboard"
