--- a/app/src/main/res/layout/orders_create_change_activity.xml
+++ b/app/src/main/res/layout/orders_create_change_activity.xml
@@ -20,6 +20,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
+                android:background="@color/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways">
 
                 <ImageButton
