--- a/app/src/main/res/layout/dash_board_activity.xml
+++ b/app/src/main/res/layout/dash_board_activity.xml
@@ -3,49 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_grey1"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    android:background="@color/light_grey1">
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="48dp"
+            android:layout_height="56dp"
             android:gravity="center">
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:id="@+id/userName_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/dashboard"
-                    android:textSize="16sp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:textColor="@color/white"/>
+                    android:text="@string/dashboard"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/logout_imageview"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_logout"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:src="@drawable/ic_logout" />
+
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/refresh_imageview"
                     android:layout_width="38dp"
                     android:layout_height="38dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_reload"
+                    android:layout_marginRight="5dp"
                     android:padding="5dp"
-                    android:layout_marginRight="5dp"/>
+                    android:src="@drawable/ic_reload" />
             </RelativeLayout>
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
@@ -54,12 +59,13 @@
         android:id="@+id/dashboard_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:clipToPadding="false"
+        android:horizontalSpacing="8dp"
         android:numColumns="2"
-        android:horizontalSpacing="10dp"
-        android:verticalSpacing="10dp"
-        android:layout_margin="20dp"
-        android:scrollbars="none"/>
+        android:padding="8dp"
+        android:scrollbars="none"
+        android:verticalSpacing="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
     <!--<android.support.v4.widget.NestedScrollView
