--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -116,10 +116,10 @@
             android:id="@+id/login_button"
             android:layout_width="300dp"
             android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/login_button_bg"
             android:text="@string/login"
-            android:textSize="18sp"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="10dp"/>
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
