--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -5,35 +5,37 @@
     android:background="@color/light_grey"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
+        android:layout_height="56dp"
         android:background="@color/colorPrimary"
-        android:layout_height="49dp"
         android:gravity="center"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
+
             <com.enstrapp.fieldtekpro.customfont.Font_TextView
                 android:id="@+id/title_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:text="@string/settings"
                 android:textColor="@color/white"
-                android:text="@string/settings"/>
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/back_imageview"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_arrow_back_white_24px"
-                android:padding="5dp"/>
+                android:textSize="16sp" />
+
+            <ImageButton
+                android:id="@+id/back_iv"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
+                android:layout_marginStart="@dimen/toolbar_icon_margin"
+                android:layout_marginTop="@dimen/toolbar_icon_margin"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/ic_arrow_back_white_24px" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -84,7 +86,7 @@
                     android:padding="10dp"
                     android:text="@string/app_version_data"
                     android:textColor="@color/black"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
 
@@ -102,7 +104,7 @@
                     android:gravity="center|right"
                     android:text="@string/initial_load"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
@@ -112,7 +114,7 @@
                     android:gravity="center"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_Checkbox
                     android:id="@+id/initialload_cb"
@@ -149,7 +151,7 @@
                     android:gravity="center"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_Checkbox
                     android:id="@+id/refresh_cb"
@@ -176,7 +178,7 @@
                     android:gravity="center|right"
                     android:text="@string/push_interval"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
@@ -186,12 +188,13 @@
                     android:gravity="center"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_Edittext
                     android:id="@+id/pushIntrvl_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/blueborder"
                     android:maxLength="3"
@@ -199,17 +202,16 @@
                     android:padding="10dp"
                     android:text="30"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:layout_marginRight="10dp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
 
             <LinearLayout
+                android:id="@+id/passcode_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:id="@+id/passcode_layout">
+                android:orientation="horizontal">
 
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:layout_width="0dp"
@@ -229,7 +231,7 @@
                     android:gravity="center"
                     android:text="@string/colon"
                     android:textColor="@color/light_grey2"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:id="@+id/reset_passcode_textview"
@@ -239,7 +241,7 @@
                     android:padding="10dp"
                     android:text="@string/reset_passcode"
                     android:textColor="@color/black"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
         </LinearLayout>
