--- a/app/src/main/res/layout/functionlocation_activity.xml
+++ b/app/src/main/res/layout/functionlocation_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey">
@@ -9,30 +8,33 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="49dp"
-        android:gravity="center"
         android:background="@color/colorPrimary"
+        android:gravity="center"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
+
             <com.enstrapp.fieldtekpro.customfont.Font_TextView
                 android:id="@+id/title_textview"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:gravity="center"
                 android:textColor="@color/white"
-                android:gravity="center"/>
+                android:textSize="16sp" />
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/back_imageview"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_arrow_back_white_24px"
-                android:padding="5dp"/>
+                android:padding="5dp"
+                android:src="@drawable/ic_arrow_back_white_24px" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -49,20 +51,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="49dp"
                 android:layout_margin="8dp">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardElevation="10dp"
-                    app:cardBackgroundColor="@color/white">
+                    app:cardBackgroundColor="@color/white"
+                    app:cardElevation="10dp">
+
                     <SearchView
                         android:id="@+id/search"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        android:iconifiedByDefault="false"
                         android:background="@color/light_grey2"
                         android:focusable="false"
-                        android:focusableInTouchMode="true"/>
+                        android:focusableInTouchMode="true"
+                        android:iconifiedByDefault="false"
+                        android:textSize="15sp" />
                 </android.support.v7.widget.CardView>
             </LinearLayout>
 
@@ -70,31 +74,32 @@
                 android:id="@+id/list_recycleview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:layout_marginTop="65dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="8dp"
+                android:layout_marginTop="65dp"
                 android:layout_marginRight="8dp"
-                android:paddingBottom="20dp"/>
+                android:paddingBottom="20dp"
+                android:scrollbars="vertical" />
 
             <LinearLayout
                 android:id="@+id/no_data_layout"
-                android:visibility="gone"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center">
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:visibility="gone">
+
                 <com.enstrapp.fieldtekpro.customfont.Font_TextView
                     android:id="@+id/no_data_textview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:drawableTop="@drawable/ic_no_data_icon"
                     android:gravity="center"
                     android:text="@string/no_data_found"
                     android:textColor="@color/red"
-                    android:textSize="16sp"
-                    android:drawableTop="@drawable/ic_no_data_icon"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </RelativeLayout>
