--- a/app/src/main/res/layout/alertlog_list_data.xml
+++ b/app/src/main/res/layout/alertlog_list_data.xml
@@ -54,7 +54,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:textColor="@color/white"
-                        android:text="@string/retry"
+                        android:text="@string/sync"
                         android:textSize="15sp"/>
                 </LinearLayout>
             </LinearLayout>
