--- a/app/src/main/res/layout/notifications_list_activity.xml
+++ b/app/src/main/res/layout/notifications_list_activity.xml
@@ -21,7 +21,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none"
-                android:paddingBottom="75dp"/>
+                android:paddingBottom="75dp"
+                android:clipToPadding="false"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.v4.widget.NestedScrollView>
 
