--- a/app/src/main/res/layout/datedialog.xml
+++ b/app/src/main/res/layout/datedialog.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/dark_grey"
+        android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="vertical"
         android:id="@+id/footer_layout">
@@ -39,7 +39,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:background="@color/dark_grey"/>
+                android:background="@color/colorPrimary"/>
             <View
                 android:layout_width="2dp"
                 android:layout_height="20dp"
@@ -55,7 +55,7 @@
                 android:typeface="serif"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:background="@color/dark_grey"/>
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
     </LinearLayout>
 
