--- a/app/src/main/res/layout/datetimedialog.xml
+++ b/app/src/main/res/layout/datetimedialog.xml
@@ -46,7 +46,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:background="@color/dark_grey"/>
+                android:background="@color/colorPrimary"/>
             <View
                 android:layout_width="2dp"
                 android:layout_height="20dp"
@@ -62,7 +62,7 @@
                 android:typeface="serif"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:background="@color/dark_grey"/>
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
     </LinearLayout>
 
