--- a/app/src/main/res/layout/sendmessage_dialog.xml
+++ b/app/src/main/res/layout/sendmessage_dialog.xml
@@ -43,11 +43,11 @@
 
 	<LinearLayout android:layout_gravity="center" android:layout_marginTop="10dp" android:layout_height="wrap_content" android:layout_width="300dp" android:background="@color/dark_grey">
 		<com.enstrapp.fieldtekpro.customfont.Font_Button
-            android:textColor="@color/white" android:textSize="16sp" android:id="@+id/cancel_button" android:background="@color/dark_grey" android:text="@string/cancel" android:layout_width="0dp" android:layout_weight="1" android:layout_height="40dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
+            android:textColor="@color/white" android:textSize="16sp" android:id="@+id/cancel_button" android:background="@color/colorPrimary" android:text="@string/cancel" android:layout_width="0dp" android:layout_weight="1" android:layout_height="40dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
 		<View android:background="@color/white" android:layout_width="1dp" android:layout_height="20dp"
 			android:layout_gravity="center"/>
 		<com.enstrapp.fieldtekpro.customfont.Font_Button
-            android:textColor="@color/white"  android:textSize="16sp" android:id="@+id/send_button" android:background="@color/dark_grey" android:text="@string/send" android:layout_width="0dp" android:layout_weight="1" android:layout_height="40dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
+            android:textColor="@color/white"  android:textSize="16sp" android:id="@+id/send_button" android:background="@color/colorPrimary" android:text="@string/send" android:layout_width="0dp" android:layout_weight="1" android:layout_height="40dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
 	</LinearLayout>
 
 </LinearLayout>
