Notification and order issues resolved(19_03_19)

--- a/app/src/main/res/layout/notifications_header_fragment.xml
+++ b/app/src/main/res/layout/notifications_header_fragment.xml
@@ -752,6 +752,7 @@
             android:layout_marginBottom="20dp"
             android:drawableLeft="@drawable/ic_custominfo_icon"
             android:drawablePadding="5dp"
+            android:elevation="@dimen/cardview_default_elevation"
             android:background="@color/light_grey1"/>
 
 
