--- a/app/src/main/res/layout/notifications_list_data.xml
+++ b/app/src/main/res/layout/notifications_list_data.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
@@ -154,9 +154,8 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="8dp"
                         android:textSize="14sp"
-                        android:textColor="@color/light_grey2"
-                        android:maxLines="2"
                         android:maxLength="40"
+                        android:textColor="@color/light_grey2"
                         app:layout_constraintHorizontal_bias=".0"
                         app:layout_constraintEnd_toStartOf="@+id/status_imageview"
                         app:layout_constraintStart_toEndOf="@id/status_type_textview"
