--- a/app/src/main/res/layout/orders_activity.xml
+++ b/app/src/main/res/layout/orders_activity.xml
@@ -25,7 +25,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="80dp"
+                android:clipToPadding="false"
                 android:scrollbars="none"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </android.support.v4.widget.SwipeRefreshLayout>
@@ -129,8 +130,8 @@
             android:id="@+id/floatingActionMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             fab:menu_animationDelayPerItem="50"
             fab:menu_backgroundColor="#D8000000"
             fab:menu_buttonSpacing="0dp"
